# JDCustomerAgentDev

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  soul.md
agent_framework/: __init__.py  service.py
agent_framework/api/: __init__.py  schemas.py  server.py
agent_framework/core/: __init__.py  agent.py  config.py  llm.py  llm_claude.py  llm_openai.py  llm_reliable.py
agent_framework/evaluation/: __init__.py  agent_eval.py  judge.py  memory_retrieval_eval.py  security_eval.py
agent_framework/memory/: __init__.py  compressor.py  embedder.py  long_term.py  manager.py  short_term.py  vector_store.py
agent_framework/multi_agent/: __init__.py  critic.py  protocol.py  router.py  specialists.py  supervisor.py
agent_framework/observability/: __init__.py  logger.py  metrics.py  tracer.py
agent_framework/planning/: __init__.py  executor.py  planner.py
agent_framework/safety/: __init__.py  approval.py  (+3 more)
docs/: deployment.md  stage-1-design.md  stage-1-prompt-experiment.md  stage-2-design.md  stage-3-design.md  stage-4-design.md  stage-4-memory-eval.md  stage-5-design.md  stage-6-design.md  stage-6-eval-report.md  stage-6-security-report.md  技术点精讲.md  架构框架图.md  测试复现手册.md  设计论文.md  项目综述.md
examples/: __init__.py  approval_cli.py  chat_cli.py  memory_cli.py  multi_agent_cli.py  prompt_lab.py  react_cli.py  tools_cli.py  trace_viewer.py
frame/: Agent框架实习培训大纲.md  给你一个直观的例子.docx
tests/: mock_embedder.py  mock_llm.py  test_agent.py  test_api.py  test_chroma_store.py  test_common_tools.py  test_compressor.py  test_evaluation_stage6.py  test_executor.py  test_hitl_orchestration.py  test_jd_tools.py  test_long_term.py  test_memory_manager.py  test_multi_agent.py  test_observability.py  test_planner.py  test_reliability.py  test_safety.py  test_short_term.py  test_stage5_integration.py  test_tool_calling.py  test_tools.py
(+13 files in other folders)
