[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-framework"
version = "0.1.0"
description = "从零搭建的可复用 Agent 框架(实习项目)。"
requires-python = ">=3.10"
authors = [{ name = "YibinLi-Alan", email = "yibinli@alumni.cmu.edu" }]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
packages = ["agent_framework", "agent_framework.core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true          # 厂商 SDK 无类型 stub,不因此报错
# BaseTool._run(**kwargs) 在子类里特化为具体参数(order_id: str 等)是框架的
# 「校验后分发」设计,不是 Liskov 违规——全局容忍 override。
disable_error_code = ["override"]

# 厂商适配层:有意把厂商无关的 dict 传给强类型 SDK(保持核心厂商无关),
# 这些边界处的强类型摩擦不作为类型错误。加新 provider 时照此放行。
[[tool.mypy.overrides]]
module = [
    "agent_framework.core.llm_claude",
    "agent_framework.core.llm_openai",
    "agent_framework.memory.vector_store",
]
disable_error_code = ["arg-type", "call-overload", "union-attr", "list-item"]
